# Own.NET

./: .coderabbit.yaml  .gitignore  AGENTS.execution-surfaces.md  AGENTS.md  Plan.md  Program.cs.txt  README.md  README.ru.md  __main__.py  action.yml  analysis.py  ast_nodes.py  bad_scratch_escape.own.txt  buffer_scratch.own.txt  buffer_scratch_program.cs.txt  buffers.py  cfg.py  codegen.py  diagnostics.py  ok_pool.own.txt  parser.py  pyproject.toml  report.py  run_tests.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: action-marketplace-readiness.yml  ci.yml  coderabbit-nudge.yml  mine-on-push.yml  mine-run.yml  mine.yml  oracle.yml  owen-cli-release.yml  ownsharp-cli-release.yml  pr-issue-validation.yml  sandboy-feasibility-gate.yml
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
audit/: README.md  requirements.txt
audit/adapters/: BUILD.md  README.md  UNIFIED.md  adapters.toml
audit/adapters/components/infersharp/: Cargo.toml
audit/adapters/components/infersharp/src/: lib.rs
audit/adapters/components/passthrough/: Cargo.toml
audit/adapters/components/passthrough/src/: lib.rs
audit/adapters/host/: Cargo.toml
audit/adapters/host/src/: main.rs
audit/aggregate/: normalize.py  report.py  score.py
audit/runtime/: README.md  ingest.py
audit/security/: README.md
audit/static/: run_static.py
corpus/: mine-target.txt  oracle-fp-baseline.txt  oracle-target.txt  targets.txt
corpus/real-world/: README.md
docs/: ROADMAP.md  agentic-coding-discipline-proposal.md  howto-visual-studio.md  lifetimes.md  suppression-and-fp-policy.md
docs/case-studies/: dispose-agreement-with-codeql.md  screentogif-systemevents.md  screentogif-videosource.md
docs/notes/: action-marketplace-readiness.md  agent-capability-layer.md  agent-papers-backlog-2026.md  alpha-readiness.md  architecture-review-2026-07.md  closure-capture-escape-precision.md  consolidation-and-positioning.md  corpus-benchmark.md  cts-field-dispose-optional.md  d5-ownership-transfer.md  di-captive-extractor.md  field-notes-patterns.md  incremental-computation.md  interprocedural-roadmap.md  interprocedural-tz.md  metamorphic.md  mining.md  no-op-dispose-wrapper.md  oracle-known-fps.md  oracle-sweep-2026-07-10.md  oracle-sweep-rerun-2026-07-11.md  oracle.md  owen-cli-release.md  owen-public-facade.md  own278-corpus-diff.md  ownsharp-cli-release.md  ownts-oss-benchmark.md  p022-diag-parity-checkpoint1.md  p022-full-parity-checkpoint3.md  p022-ownership-parity-checkpoint2.md  p022-review-notes.md  precision-remeasure-2026-07-11.md  precision-remeasure-2026-07-12.md  real-world-mining.md  research-landscape-2026.md  roslyn-tools-and-cli.md  sandboy-isolation-adr.md  sarif-export.md  self-whenany-precision.md  (+6 more)
examples/: bad_leak_branch.own  bad_maybe_release.own  buffer_stack.own  ok_extern_calls.own
ownlang/: __init__.py  __main__.py  analysis.py  ast_nodes.py  buffers.py  cfg.py  cfg_json.py  codegen.py  config.py  di.py  diag_sarif.py  diagnostics.py  effects.py  evidence.py  fix_apply.py  fix_bundle.py  fix_candidates.py  fix_certify.py  fix_delta.py  fix_gate.py  fix_plan.py  fix_target.py  lexer.py  lifetimes.py  lowered.py  obligations.py  ownership.py  ownir.py  parser.py  report.py
rust/: Cargo.toml  README.md
rust/crates/own-analysis/: Cargo.toml
rust/crates/own-analysis/src/: check.rs  di.rs  effect.rs  lib.rs  lifetime.rs  ownership.rs  solver.rs
rust/crates/own-analysis/tests/: diff_gen.rs  fact_parity.rs  metamorphic.rs  parity.rs  solver.rs
rust/crates/own-bridge/: Cargo.toml
rust/crates/own-bridge/src/: lib.rs  lower.rs  mos.rs
rust/crates/own-bridge/tests/: mechanisms.rs  replay.rs
rust/crates/own-cfg/: Cargo.toml
rust/crates/own-cfg/src/: buffers.rs  builder.rs  ir.rs  json.rs  lib.rs
rust/crates/own-cfg/tests/: parity.rs
rust/crates/own-diagnostics/: Cargo.toml
rust/crates/own-diagnostics/src/: diagnostic.rs  lib.rs
rust/crates/own-diagnostics/tests/: dag.rs  fixture.rs
rust/crates/own-ir/: Cargo.toml
rust/crates/own-ir/src/: lib.rs  span.rs
rust/crates/own-ir/tests/: roundtrip.rs
rust/crates/own-lowered/: Cargo.toml
rust/crates/own-lowered/src/: lib.rs  model.rs
rust/crates/own-lowered/tests/: replay.rs  strictness.rs
rust/crates/own-syntax/: Cargo.toml
rust/crates/own-syntax/src/: ast.rs  lib.rs  parser.rs  pyrepr.rs  token.rs
rust/crates/own-syntax/tests/: parity.rs
sandboy/: Cargo.toml  README.md  policy.example.toml
sandboy/src/: main.rs  policy.rs
sandboy/tests/: demo.sh
sandboy/tests/feasibility/: run_gate.py
sandboy/tests/feasibility/fixtures/: env_probe.py  fs_probe.py  net_probe.py  syscall_probe.py
scripts/: benchmark.py  check_environment_protection.sh  metamorphic.py  metamorphic_facts.py  mine.sh  mine_report.py  oracle_compare.py  oracle_exact.py  own-check.ps1  own-check.sh  own-fix-plan.sh  validate_contrib.py
spec/: Bridge.md  BridgeBehaviorMatrix.md  BufferPolicies.md  CLI.md  CodegenContract.md  Diagnostics.md  Grammar.md  Inference.md  Lifetimes.md  OwnCore.md  OwnIR.md  README.md  ownir.schema.json
tests/: _preflight.py  buffer_scratch_program.cs.txt  check_fix_candidates_facts.py  check_weak_subscribe_facts.py  gate_regressions.sh  patch_bundle_regressions.sh  rewriter_regressions.sh  run_tests.py  test_certify.py  test_certify_tierb.py  test_cfg_fixtures.py  test_cfg_json.py  test_codegen.py  test_codegen_props.py  test_corpus.py  test_di_eff_fact_parity.py  test_diag_fixtures.py  test_diag_sarif.py  test_diagnostics.py  test_diff_gen_fixtures.py  test_effects.py  test_evidence_coverage.py  test_explain.py  test_fix_apply.py  test_fix_candidates.py  test_fix_plan.py  test_gallery.py  test_gate_patch.py  test_harness_contract.py  test_lifetimes.py  test_loops.py  test_lowered_fixtures.py  test_obligations.py  test_ownership.py  test_ownir.py  test_patch_bundle.py  test_rid.py  test_spec.py  test_syntax_fixtures.py  test_verify_delta.py  (+5 more)
(+579 files in other folders)
