[package]
name = "own-adapter-host"
version = "0.1.0"
edition = "2021"
description = "Runs ownaudit:adapter WASM components under fuel/epoch/memory limits, validates their SARIF, and stamps provenance."

[[bin]]
name = "own-adapter-host"
path = "src/main.rs"

[dependencies]
# Native host deps — fetched from crates.io when you build locally.
# Component model has been stable in wasmtime since v13; pin to whatever is
# current when you build (see BUILD.md — this crate was authored, not compiled,
# in a network-restricted sandbox, so a minor API nudge may be needed).
wasmtime = { version = "28", features = ["component-model"] }
anyhow = "1"
serde_json = "1"
sha2 = "0.10"
