[package]
name = "own-ir"
description = "OwnIR fact contract (serde types + schema-version gate) and the span/location leaf"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
version = "0.1.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
