[package]
name = "own-syntax"
description = "OwnLang lexer + recursive-descent parser + AST, error-message-parity port of ownlang/{lexer,parser,ast_nodes}.py"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
version = "0.1.0"

[dependencies]
unicode-properties = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
