[package]
name = "adapter-passthrough"
version = "0.1.0"
edition = "2021"
description = "ownaudit:adapter component — validate + normalize already-SARIF tool output (Roslyn, CodeQL). The on-ramp for SARIF-literate tools so they take the same path as the rest."

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"
wit-bindgen-rt = { version = "0.35", features = ["bitflags"] }

[package.metadata.component]
package = "ownaudit:adapter"

[package.metadata.component.target]
path = "../../wit"
world = "sarif-adapter"

[profile.release]
opt-level = "s"
lto = true
